@@ -71,11 +71,25 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
             
         <!-- Generally Useful Test Dependencies -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -389,9 +403,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <configuration>
-                    <!--<source>${java.version}</source>-->
-                    <!--<target>${java.version}</target>-->
-                    <!--<encoding>${project.build.sourceEncoding}</encoding>-->
                     <archive>
                         <addMavenDescriptor>true</addMavenDescriptor>
                         <index>true</index>
@@ -423,7 +434,7 @@
                         <java.security.egd>file:/dev/./urandom</java.security.egd>
                         <java.awt.headless>true</java.awt.headless>
                     </systemPropertyVariables>
-                    <argLine>-Xmx1024m</argLine>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                 </configuration>
             </plugin>
             <plugin>
@@ -452,7 +463,6 @@
                 <configuration>
                     <show>protected</show>
                     <quiet>true</quiet>
-                    <!--<test-aggregate>false</test-aggregate>-->
                     <failOnError>false</failOnError>
                 </configuration>
                 <executions>
@@ -497,6 +507,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
                 <configuration>
+                    <!--suppress MavenModelInspection -->
                     <tagBase>${releaseTagBase}</tagBase>
                 </configuration>
             </plugin>
